// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddVersionDialog component onSubmit shows dialog warning when adding duplicate local versions 1`] = `
<Blueprint4.Dialog
  canOutsideClickClose={true}
  className="dialog-add-version"
  isOpen={false}
  onClose={[Function]}
  title="Add local Electron build"
>
  <div
    className="bp4-dialog-body"
  >
    <Blueprint4.FileInput
      hasSelection={false}
      id="custom-electron-version"
      inputProps={
        Object {
          "onClick": [Function],
        }
      }
      text="/test/path"
    />
    <br />
    <Blueprint4.Callout>
      This folder is already in use as version "2.2.2". Would you like to switch to that version now?
    </Blueprint4.Callout>
  </div>
  <div
    className="bp4-dialog-footer"
  >
    <div
      className="bp4-dialog-footer-actions"
    >
      <Blueprint4.Button
        disabled={false}
        icon="add"
        key="submit"
        onClick={[Function]}
        text="Switch"
      />
      <Blueprint4.Button
        icon="cross"
        key="cancel"
        onClick={[Function]}
        text="Cancel"
      />
    </div>
  </div>
</Blueprint4.Dialog>
`;

exports[`AddVersionDialog component renders 1`] = `
<Blueprint4.Dialog
  canOutsideClickClose={true}
  className="dialog-add-version"
  isOpen={false}
  onClose={[Function]}
  title="Add local Electron build"
>
  <div
    className="bp4-dialog-body"
  >
    <Blueprint4.FileInput
      hasSelection={false}
      id="custom-electron-version"
      inputProps={
        Object {
          "onClick": [Function],
        }
      }
      text="/test/file"
    />
    <br />
    <Blueprint4.Callout>
      We found an Electron.app in this folder.
      <p>
        Please specify a version, used for typings and the name. Must be
         
        <code>
          semver
        </code>
         compliant.
      </p>
      <Blueprint4.InputGroup
        onChange={[Function]}
        placeholder="4.0.0"
        value=""
      />
    </Blueprint4.Callout>
  </div>
  <div
    className="bp4-dialog-footer"
  >
    <div
      className="bp4-dialog-footer-actions"
    >
      <Blueprint4.Button
        disabled={false}
        icon="add"
        key="submit"
        onClick={[Function]}
        text="Add"
      />
      <Blueprint4.Button
        icon="cross"
        key="cancel"
        onClick={[Function]}
        text="Cancel"
      />
    </div>
  </div>
</Blueprint4.Dialog>
`;

exports[`AddVersionDialog component renders 2`] = `
<Blueprint4.Dialog
  canOutsideClickClose={true}
  className="dialog-add-version"
  isOpen={false}
  onClose={[Function]}
  title="Add local Electron build"
>
  <div
    className="bp4-dialog-body"
  >
    <Blueprint4.FileInput
      hasSelection={false}
      id="custom-electron-version"
      inputProps={
        Object {
          "onClick": [Function],
        }
      }
      text="/test/file"
    />
    <br />
    <Blueprint4.Callout>
      We found an Electron.app in this folder.
      <p>
        Please specify a version, used for typings and the name. Must be
         
        <code>
          semver
        </code>
         compliant.
      </p>
      <Blueprint4.InputGroup
        intent="danger"
        onChange={[Function]}
        placeholder="4.0.0"
        value=""
      />
    </Blueprint4.Callout>
  </div>
  <div
    className="bp4-dialog-footer"
  >
    <div
      className="bp4-dialog-footer-actions"
    >
      <Blueprint4.Button
        disabled={true}
        icon="add"
        key="submit"
        onClick={[Function]}
        text="Add"
      />
      <Blueprint4.Button
        icon="cross"
        key="cancel"
        onClick={[Function]}
        text="Cancel"
      />
    </div>
  </div>
</Blueprint4.Dialog>
`;

exports[`AddVersionDialog component renders 3`] = `
<Blueprint4.Dialog
  canOutsideClickClose={true}
  className="dialog-add-version"
  isOpen={false}
  onClose={[Function]}
  title="Add local Electron build"
>
  <div
    className="bp4-dialog-body"
  >
    <Blueprint4.FileInput
      hasSelection={false}
      id="custom-electron-version"
      inputProps={
        Object {
          "onClick": [Function],
        }
      }
      text="/test/file"
    />
    <br />
    <Blueprint4.Callout>
      This folder is already in use as version "2.2.2". Would you like to switch to that version now?
    </Blueprint4.Callout>
  </div>
  <div
    className="bp4-dialog-footer"
  >
    <div
      className="bp4-dialog-footer-actions"
    >
      <Blueprint4.Button
        disabled={false}
        icon="add"
        key="submit"
        onClick={[Function]}
        text="Switch"
      />
      <Blueprint4.Button
        icon="cross"
        key="cancel"
        onClick={[Function]}
        text="Cancel"
      />
    </div>
  </div>
</Blueprint4.Dialog>
`;
